--- a/build.gradle
+++ b/build.gradle
@@ -386,8 +386,13 @@ if (project.platform == "linux-athena") {
         workingDir ffmpegBuildDirectory.toString()
         def processors = Runtime.runtime.availableProcessors()
 
-        executable 'make'
-        args = ["-j${processors}"]
+        if (project.platform.startsWith("windows")) {
+            executable 'bash'
+            args = ["-c", "make -j${processors}"]
+        } else {
+            executable 'make'
+            args = ["-j${processors}"]
+        }
         inputs.file ffmpegBuildDirectory.resolve("Makefile").toFile()
     }
 
