--- a/build.gradle
+++ b/build.gradle
@@ -198,7 +198,7 @@ if (project.platform == "linux-athena") {
  'Debug': project.cmakeBuildDebugDirectory,
  'SharedDebug': project.cmakeBuildSharedDebugDirectory
 ].each{ buildType, buildDirectory ->
-    def x264BuildDirectory = Paths.get(projectDir.canonicalPath).resolve('x264').resolve('build')
+    def x264BuildDirectory = Paths.get(projectDir.canonicalPath).resolve("x264-build$buildType")
     def x264InstallDirectory = buildDirectory.resolve('x264')
 
     project.tasks.create('x264Configure' + buildType, Exec) {
@@ -240,7 +240,7 @@ if (project.platform == "linux-athena") {
 
         if (project.platform.startsWith("windows")) {
             executable 'bash'
-            args = ["-c", "CC=cl ../configure " + configureArgs().join(" ")]
+            args = ["-c", "CC=cl ../x264/configure " + configureArgs().join(" ")]
         } else {
             executable Paths.get(projectDir.canonicalPath).resolve('x264').resolve('configure').toString()
             args = configureArgs()
@@ -296,7 +296,7 @@ if (project.platform == "linux-athena") {
  'Debug': project.cmakeBuildDebugDirectory,
  'SharedDebug': project.cmakeBuildSharedDebugDirectory
 ].each{ buildType, buildDirectory ->
-    def ffmpegBuildDirectory = Paths.get(projectDir.canonicalPath).resolve('ffmpeg').resolve('build')
+    def ffmpegBuildDirectory = Paths.get(projectDir.canonicalPath).resolve("ffmpeg-build$buildType")
     def ffmpegInstallDirectory = buildDirectory.resolve('ffmpeg')
 
     project.tasks.create('FFmpegConfigure' + buildType, Exec) {
@@ -324,6 +324,12 @@ if (project.platform == "linux-athena") {
                     '--disable-postproc',
                     '--disable-avfilter',
                     '--disable-network',
+                    '--disable-muxers',
+                    '--disable-demuxers',
+                    '--disable-parsers',
+                    '--disable-protocols',
+                    '--disable-devices',
+                    '--disable-filters',
                     '--enable-avresample',
                     '--enable-libx264',
                     '--enable-pic',
@@ -374,7 +380,7 @@ if (project.platform == "linux-athena") {
 
         if (project.platform.startsWith("windows")) {
             executable 'bash'
-            args = ["-c", "../configure " + configureArgs().join(" ")]
+            args = ["-c", "cp -R ../ffmpeg src && src/configure " + configureArgs().join(" ")]
         } else {
             executable Paths.get(projectDir.canonicalPath).resolve('ffmpeg').resolve('configure').toString()
             args = configureArgs()
@@ -388,9 +394,6 @@ if (project.platform == "linux-athena") {
 
         executable 'make'
         args = ["-j${processors}"]
-        if (project.platform.startsWith("windows")) {
-            args = args + "--file=../Makefile"
-        }
         inputs.file ffmpegBuildDirectory.resolve("Makefile").toFile()
     }
 
