--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,22 +89,19 @@ jobs:
       - run: ./gradlew build -PjenkinsBuild
         name: Build with Gradle
       - name: Import Developer ID Certificate
-        run: |
-          base64 -d <<< "${{ secrets.APPLE_CERTIFICATE_DATA }}" > /tmp/signing-certificate.p12
-          security create-keychain -p ${{ secrets.APPLE_KEYCHAIN_PASSWORD }} wpilibsuite-keychain
-          security default-keychain -s wpilibsuite-keychain
-          security unlock-keychain -p ${{ secrets.APPLE_KEYCHAIN_PASSWORD }} wpilibsuite-keychain
-          security import /tmp/signing-certificate.p12 -f pkcs12 -k wpilibsuite-keychain -P ${{ secrets.APPLE_CERTIFICATE_PASSWORD }} -T /usr/bin/codesign -x
-          security set-key-partition-list -S apple-tool:,apple: -s -k ${{ secrets.APPLE_KEYCHAIN_PASSWORD }} wpilibsuite-keychain > /tmp/output.txt
-          security set-keychain-settings -lut 2700
+        uses: wpilibsuite/import-signing-certificate@v1
+        with:
+          certificate-data: ${{ secrets.APPLE_CERTIFICATE_DATA }}
+          certificate-passphrase: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
+          keychain-password: ${{ secrets.APPLE_KEYCHAIN_PASSWORD }}
         if: |
           matrix.artifact-name == 'macOS' && (github.repository_owner == 'wpilibsuite' &&
-          (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')))
+          (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/actions'))
       - run: ./gradlew build -PjenkinsBuild -PdeveloperID=${{ secrets.DEVELOPER_ID }}
         name: Sign Binaries with Developer ID
         if: |
           matrix.artifact-name == 'macOS' && (github.repository_owner == 'wpilibsuite' &&
-          (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')))
+          (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/actions'))
       - uses: actions/upload-artifact@v2
         with:
           name: macOS
