--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,7 +97,7 @@ jobs:
         if: |
           github.repository_owner == 'wpilibsuite' &&
           (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/actions')
-      - run: ./gradlew build -PjenkinsBuild -PdeveloperID=${{ secrets.DEVELOPER_ID }}
+      - run: ./gradlew build -PjenkinsBuild -PdeveloperID=${{ secrets.APPLE_DEVELOPER_ID }}
         name: Sign Binaries with Developer ID
         if: |
           github.repository_owner == 'wpilibsuite' &&
