Set WITH_GTK=OFF
WITH_GTK=ON causes the Mac build to link to gthreads even though GTK doesn't
exist on that platform.  This creates an artificial dependency on build tools
being installed.

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ ext {
             '-DWITH_OPENEXR=OFF',
             '-DWITH_GSTREAMER=OFF',
             '-DWITH_LAPACK=OFF',
-            '-DWITH_GTK=ON',
+            '-DWITH_GTK=OFF',
             '-DWITH_1394=OFF',
             '-DWITH_JASPER=OFF',
             '-DWITH_TIFF=OFF',
