--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,12 +96,12 @@ jobs:
           keychain-password: ${{ secrets.APPLE_KEYCHAIN_PASSWORD }}
         if: |
           github.repository_owner == 'wpilibsuite' &&
-          (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v'))
+          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
       - run: ./gradlew build -PjenkinsBuild -PdeveloperID=${{ secrets.APPLE_DEVELOPER_ID }}
         name: Sign Binaries with Developer ID
         if: |
           github.repository_owner == 'wpilibsuite' &&
-          (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v'))
+          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
       - uses: actions/upload-artifact@v2
         with:
           name: macOS
