Fix Windows build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
             build-options: "-PskipRelease -PskipSources"
 
     name: "Build - ${{ matrix.artifact-name }}"
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
         with:
