--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,16 +12,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - container: wpilib/roborio-cross-ubuntu:2022-18.04
+          - container: wpilib/roborio-cross-ubuntu:2022-20.04
             artifact-name: Athena
             build-options: "-Pplatform=linux-athena"
-          - container: wpilib/raspbian-cross-ubuntu:10-18.04
+          - container: wpilib/raspbian-cross-ubuntu:10-20.04
             artifact-name: Raspbian
             build-options: "-Pplatform=linux-raspbian"
-          - container: wpilib/aarch64-cross-ubuntu:bionic-18.04
+          - container: wpilib/aarch64-cross-ubuntu:bionic-20.04
             artifact-name: Bionic
             build-options: "-Pplatform=linux-aarch64bionic"
-          - container: wpilib/ubuntu-base:18.04
+          - container: wpilib/ubuntu-base:20.04
             artifact-name: Linux
             build-options: ""
 
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - run: sudo apt-get update && sudo apt-get install ant -y && sudo rm -rf /var/lib/apt/lists/*
+      - run: sudo apt-get update && sudo apt-get install ant -y && sudo rm -rf /var/lib/apt/lists/* && sudo rm -f /bin/ant && sudo ln -s /usr/share/ant/bin/ant /bin/ant
         name: Install Ant
       - run: ./gradlew build -PjenkinsBuild ${{ matrix.build-options }}
         name: Build with Gradle
