--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,7 +133,7 @@ jobs:
       #     (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
       - uses: actions/upload-artifact@v2
         with:
-          name: macOS
+          name: macOSArm
           path: gradleDir/outputs/
 
   combine:
