--- a/build.gradle
+++ b/build.gradle
@@ -90,37 +90,13 @@ def getPlatform() {
     return platform
 }
 
-def getOutputFormat(platform) {
-    if (platform == "linux-athena") {
-        return "elf32-littlearm"
-    } else if (platform == "linux-raspbian") {
-        return "elf32-littlearm"
-    } else if (platform == "linux-aarch64bionic") {
-        return ""
-    } else if (platform == "linux-x86") {
-        return "elf32-i386"
-    } else if (platform == "linux-x86_64") {
-        return "elf64-x86-64"
-    } else if (platform == "osx-x86") {
-        return ""
-    } else if (platform == "osx-x86_64") {
-        return ""
-    } else if (platform == "windows-x86") {
-        return "pe-i386"
-    } else if (platform == "windows-x86_64") {
-        return "pe-x86-64"
-    } else {
-        return ""
-    }
-}
-
 def getPlatformPath(platform) {
     if (platform == "linux-athena") {
         return "linux/athena"
-    } else if (platform == "linux-raspbian") {
-        return "linux/raspbian"
-    } else if (platform == "linux-aarch64bionic") {
-        return "linux/aarch64bionic"
+    } else if (platform == "linux-arm32") {
+        return "linux/arm32"
+    } else if (platform == "linux-arm64") {
+        return "linux/arm64"
     } else if (platform == "linux-x86") {
         return "linux/x86"
     } else if (platform == "linux-x86_64") {
@@ -200,10 +176,10 @@ def objCopyExe = 'objcopy'
 if (project.platform == "linux-athena") {
     stripExe = 'arm-frc2022-linux-gnueabi-strip'
     objCopyExe = 'arm-frc2022-linux-gnueabi-objcopy'
-} else if (project.platform == "linux-raspbian") {
+} else if (project.platform == "linux-arm32") {
     stripExe = 'arm-raspbian10-linux-gnueabihf-strip'
     objCopyExe = 'arm-raspbian10-linux-gnueabihf-objcopy'
-} else if (project.platform == "linux-aarch64bionic") {
+} else if (project.platform == "linux-arm64") {
     stripExe = 'aarch64-bionic-linux-gnu-strip'
     objCopyExe = 'aarch64-bionic-linux-gnu-objcopy'
 }
@@ -246,7 +222,7 @@ if (project.platform == "linux-athena") {
                     '-DENABLE_VFPV3=ON' +
                     '-DOPENCV_EXTRA_FLAGS_DEBUG=-Og' +
                     "-DCMAKE_MODULE_PATH=$rootDir/arm-frc-modules"
-            } else if (project.platform == "linux-raspbian") {
+            } else if (project.platform == "linux-arm32") {
                 toolchain = projectDir.canonicalPath + "/arm-pi-gnueabihf.toolchain.cmake"
                 println "Using toolchain '${toolchain}'"
                 return args + "-DCMAKE_TOOLCHAIN_FILE=${toolchain}" +
@@ -254,7 +230,7 @@ if (project.platform == "linux-athena") {
                     '-DENABLE_VFPV3=ON' +
                     '-DOPENCV_EXTRA_FLAGS_DEBUG=-Og' +
                     "-DCMAKE_MODULE_PATH=$rootDir/arm-frc-modules"
-            } else if (project.platform == "linux-aarch64bionic") {
+            } else if (project.platform == "linux-arm64") {
                 toolchain = projectDir.canonicalPath + "/aarch64-bionic-gnu.toolchain.cmake"
                 println "Using toolchain '${toolchain}'"
                 return args + "-DCMAKE_TOOLCHAIN_FILE=${toolchain}" +
@@ -388,7 +364,7 @@ if (project.platform == "linux-athena") {
 
                 if (project.platform == "linux-athena" || project.platform == "linux-raspbian") {
                     inputString += "addlib ../3rdparty/lib/libtegra_hal.a\n"
-                } else if (project.platform == "linux-aarch64bionic") {
+                } else if (project.platform == "linux-arm64") {
                     inputString += "addlib ../3rdparty/lib/libtegra_hal.a\n"
                 }
 
