--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,20 +92,20 @@ jobs:
           java-version: 11
       - run: ./gradlew build -PjenkinsBuild
         name: Build with Gradle
-      # - name: Import Developer ID Certificate
-      #   uses: wpilibsuite/import-signing-certificate@v1
-      #   with:
-      #     certificate-data: ${{ secrets.APPLE_CERTIFICATE_DATA }}
-      #     certificate-passphrase: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-      #     keychain-password: ${{ secrets.APPLE_KEYCHAIN_PASSWORD }}
-      #   if: |
-      #     github.repository_owner == 'wpilibsuite' &&
-      #     (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
-      # - run: ./gradlew build -PjenkinsBuild -PdeveloperID=${{ secrets.APPLE_DEVELOPER_ID }}
-      #   name: Sign Binaries with Developer ID
-      #   if: |
-      #     github.repository_owner == 'wpilibsuite' &&
-      #     (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
+      - name: Import Developer ID Certificate
+        uses: wpilibsuite/import-signing-certificate@v1
+        with:
+          certificate-data: ${{ secrets.APPLE_CERTIFICATE_DATA }}
+          certificate-passphrase: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
+          keychain-password: ${{ secrets.APPLE_KEYCHAIN_PASSWORD }}
+        if: |
+          github.repository_owner == 'wpilibsuite' &&
+          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
+      - run: ./gradlew build -PjenkinsBuild -PdeveloperID=${{ secrets.APPLE_DEVELOPER_ID }}
+        name: Sign Binaries with Developer ID
+        if: |
+          github.repository_owner == 'wpilibsuite' &&
+          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
       - uses: actions/upload-artifact@v2
         with:
           name: macOS
